// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration should compile basic 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.HelloWorld = exports.Hello = void 0;

var _createElement = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/createElement\\"));

var _renderInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/renderInternal\\"));

var _unmountInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/unmountInternal\\"));

var _renderChildren = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/renderChildren\\"));

var _hooks = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/hooks\\"));

var React = _interopRequireWildcard(require(\\"babel-plugin-rawact/lib/runtime/react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _instructions = {};
var _instructions2 = {};

var Hello = function Hello(_ref) {
  var name = _ref.name;
  const _child = name;
  return _context => {
    if (_context._ !== _instructions) {
      if (_context.$) _context.$();

      _context.$ = () => {
        (0, _unmountInternal.default)(_context.b_);
      };

      _context._ = _instructions;
      _context.a = (0, _createElement.default)(\\"p\\");
      (0, _renderInternal.default)(_context, _child, \\"b\\", 1);
      (0, _renderChildren.default)(_context.a, [\\"Hello \\", _context[\\"b\\"], \\"!\\"]);
    } else {
      (0, _renderInternal.default)(_context, _child, \\"b\\", 0);
    }

    return _context.a;
  };
};

exports.Hello = Hello;

var HelloWorld = function HelloWorld() {
  const _child2 = (0, _hooks.default)(Hello, {
    name: \\"World\\"
  });

  return _context2 => {
    if (_context2._ !== _instructions2) {
      if (_context2.$) _context2.$();

      _context2.$ = () => {
        (0, _unmountInternal.default)(_context2.b_);
      };

      _context2._ = _instructions2;
      _context2.a = (0, _createElement.default)(\\"div\\");
      _context2.a.title = \\"hello\\";
      (0, _renderInternal.default)(_context2, _child2, \\"b\\", 1);
      (0, _renderChildren.default)(_context2.a, [_context2[\\"b\\"], \\"!\\", '!']);
    } else {
      (0, _renderInternal.default)(_context2, _child2, \\"b\\", 0);
    }

    return _context2.a;
  };
};

exports.HelloWorld = HelloWorld;"
`;

exports[`integration should compile classes 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.RenderCountingPure = exports.Hello = void 0;

var _createElement = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/createElement\\"));

var _renderInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/renderInternal\\"));

var _unmountInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/unmountInternal\\"));

var _renderChildren = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/renderChildren\\"));

var React = _interopRequireWildcard(require(\\"babel-plugin-rawact/lib/runtime/react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _instructions = {};
var _instructions2 = {};

function _typeof(obj) { if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

function _possibleConstructorReturn(self, call) { if (call && (_typeof(call) === \\"object\\" || typeof call === \\"function\\")) { return call; } return _assertThisInitialized(self); }

function _assertThisInitialized(self) { if (self === void 0) { throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\"); } return self; }

function _getPrototypeOf(o) { _getPrototypeOf = Object.setPrototypeOf ? Object.getPrototypeOf : function _getPrototypeOf(o) { return o.__proto__ || Object.getPrototypeOf(o); }; return _getPrototypeOf(o); }

function _inherits(subClass, superClass) { if (typeof superClass !== \\"function\\" && superClass !== null) { throw new TypeError(\\"Super expression must either be null or a function\\"); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, writable: true, configurable: true } }); if (superClass) _setPrototypeOf(subClass, superClass); }

function _setPrototypeOf(o, p) { _setPrototypeOf = Object.setPrototypeOf || function _setPrototypeOf(o, p) { o.__proto__ = p; return o; }; return _setPrototypeOf(o, p); }

var Hello =
/*#__PURE__*/
function (_React$Component) {
  _inherits(Hello, _React$Component);

  function Hello() {
    _classCallCheck(this, Hello);

    return _possibleConstructorReturn(this, _getPrototypeOf(Hello).apply(this, arguments));
  }

  _createClass(Hello, [{
    key: \\"render\\",
    value: function render() {
      const _child = this.props.name;
      return _context => {
        if (_context._ !== _instructions) {
          if (_context.$) _context.$();

          _context.$ = () => {
            (0, _unmountInternal.default)(_context.b_);
          };

          _context._ = _instructions;
          _context.a = (0, _createElement.default)(\\"p\\");
          (0, _renderInternal.default)(_context, _child, \\"b\\", 1);
          (0, _renderChildren.default)(_context.a, [\\"Hello \\", _context[\\"b\\"], \\"!\\"]);
        } else {
          (0, _renderInternal.default)(_context, _child, \\"b\\", 0);
        }

        return _context.a;
      };
    }
  }]);

  return Hello;
}(React.Component);

exports.Hello = Hello;

var RenderCountingPure =
/*#__PURE__*/
function (_React$PureComponent) {
  _inherits(RenderCountingPure, _React$PureComponent);

  function RenderCountingPure() {
    var _this;

    _classCallCheck(this, RenderCountingPure);

    _this = _possibleConstructorReturn(this, _getPrototypeOf(RenderCountingPure).call(this));
    _this.count = 0;
    return _this;
  }

  _createClass(RenderCountingPure, [{
    key: \\"render\\",
    value: function render() {
      const _child2 = this.props.name;

      const _child3 = ++this.count;

      return _context2 => {
        if (_context2._ !== _instructions2) {
          if (_context2.$) _context2.$();

          _context2.$ = () => {
            (0, _unmountInternal.default)(_context2.b_);
            (0, _unmountInternal.default)(_context2.c_);
          };

          _context2._ = _instructions2;
          _context2.a = (0, _createElement.default)(\\"p\\");
          (0, _renderInternal.default)(_context2, _child2, \\"b\\", 1);
          (0, _renderInternal.default)(_context2, _child3, \\"c\\", 1);
          (0, _renderChildren.default)(_context2.a, [\\"Hi to \\", _context2[\\"b\\"], \\" x\\", _context2[\\"c\\"]]);
        } else {
          (0, _renderInternal.default)(_context2, _child2, \\"b\\", 0);
          (0, _renderInternal.default)(_context2, _child3, \\"c\\", 0);
        }

        return _context2.a;
      };
    }
  }]);

  return RenderCountingPure;
}(React.PureComponent);

exports.RenderCountingPure = RenderCountingPure;"
`;

exports[`integration should compile fragment 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Hello = void 0;

var _renderInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/renderInternal\\"));

var _unmountInternal = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/unmountInternal\\"));

var _createFragment = _interopRequireDefault(require(\\"babel-plugin-rawact/lib/runtime/createFragment\\"));

var React = _interopRequireWildcard(require(\\"babel-plugin-rawact/lib/runtime/react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var _instructions = {};

var Hello = function Hello(_ref) {
  var name = _ref.name;
  const _child = name;
  return _context => {
    if (_context._ !== _instructions) {
      if (_context.$) _context.$();

      _context.$ = () => {
        (0, _unmountInternal.default)(_context.b_);
      };

      _context._ = _instructions;
      (0, _renderInternal.default)(_context, _child, \\"b\\", 1);
      _context.a = (0, _createFragment.default)([\\"Hello \\", _context[\\"b\\"], \\"!\\"]);
    } else {
      (0, _renderInternal.default)(_context, _child, \\"b\\", 0);
      _context.a[1] = _context[\\"b\\"];
    }

    return _context.a;
  };
};

exports.Hello = Hello;"
`;
